--- a/snps/templates/home.html
+++ b/snps/templates/home.html
@@ -69,14 +69,14 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <section class="bg-dark" id="report">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Free report at SNPSSITE!</h2>
                 <a href="{{ url_for('report') }}" class="btn btn-default btn-xl sr-button">Get Your Report Now!</a>
             </div>
         </div>
-    </aside>
+    </section>    
 
     <section id="contact">
         <div class="container">
