--- a/snps/templates/navigation_base.html
+++ b/snps/templates/navigation_base.html
@@ -72,6 +72,9 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#report">Report</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
